--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -13,20 +13,31 @@
     </div>
 
     <div class="recipe-author">
+        {% if recipe.author is not None %}
         <span class="recipe-author-text">
             <i class="fas fa-user"></i>
+
+            {% if recipe.author.first_name %}
             {{recipe.author.first_name}} {{recipe.author.last_name}}
+
+            {% else %}
+            {{recipe.author.username}}
+
+            {% endif %}
+        {% endif %}    
         </span>
         <span class="recipe-author-text">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y"}}
         </span>
-        <span class="recipe-author-text">
-            <a href="/recipes/category/cafe-da-manha">
-                <i class="fas fa-layer-group"></i>
-                <span>{{recipe.category.name}}</span>
-            </a>
-        </span>
+        {%if recipe.category is not None%}
+            <span class="recipe-author-text">
+                <a href="{%url 'recipes:category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{recipe.category.name}}</span>
+                </a>
+            </span>
+        {%endif%}
     </div>
 
     <div class="recipe-description-text">
@@ -57,11 +68,14 @@
         </footer>
     {%endif%}
 
-    {%if is_detail_page%}
+    {% if is_detail_page is True %}
         <div class="preparation-steps">
-            {{recipe.preparation_steps|linebreaksbr}}
+            {% if recipe.prepartion_steps_is_html is True %}
+                {{ recipe.prepartion_steps|safe }}
+            {% else %}
+                {{ recipe.prepartion_steps|linebreaksbr }}
+            {% endif %}
         </div>
-    {%endif%}
-        
+    {% endif %}
 
 </div>
